click to zoom large image. Fixed z-index on close button

--- a/OrangeBox 3.0/css/orangebox.css
+++ b/OrangeBox 3.0/css/orangebox.css
@@ -92,7 +92,7 @@
 	position:absolute;
 	top:0;
 	width:30px;
-	z-index:1004;
+	z-index:1005;
 }
 #ob_title {
 	color:#fff;
@@ -106,6 +106,7 @@
 #ob_title h3 {
 	margin:0;
 	padding:0;
+	display:inline;
 }
 #ob_left,#ob_right {
 	bottom:8px;
